made design changes:sticky navbar, sidebar, btn design

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: #212529;">
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="./public/img/favicon.png">
